# CaptainsLog

./: .gitignore  CaptainsLog.spec  README.md  build_executable.sh  main_script.py  setup.cfg  setup_appdir.sh
AppDir/: .DirIcon  AppRun
config/: AppRun  CaptainsLog.appdata.xml  com.alexdlukens.CaptainsLog.desktop
src/: container_updates.py  docker_utils.py  main.py  style.css  threads.py
src/CaptainsLog/: container_updates.py  main.py  style.css
