[metadata]
name = CaptainsLog
version = v2023.08.26
author = Alexander Lukens
author_email = alexdlukens@gmail.com
url = https://github.com/alexdlukens/CaptainsLog
description = A GUI Docker log viewer
long_description = file: README.md
long_description_content_type = text/markdown
keywords = CaptainsLog, setuptools
license = GPL-3.0-or-later
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3


[options]
packages = find:
package_dir = {
    'CaptainsLog': 'src/CaptainsLog'
}
zip_safe = True
include_package_data = True

[options.packages.find]
where=src

[options.package_data]
CaptainsLog = style.css